<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/mostrardatos"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:text="@string/mostrardatos" />

            <Button
                android:id="@+id/editardatos"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:text="@string/editardatos" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/mostrarcajanegra"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:text="@string/mostrarcajanegra" />

            <ToggleButton
                android:id="@+id/activarcajanegra"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:checked="false"
                android:textOff="@string/activarcajanegra"
                android:textOn="@string/desactivarcajanegra" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/listarpartes"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:text="@string/listarpartes" />

            <Button
                android:id="@+id/darparte"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:text="@string/darparte" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <!--
            <Button
                android:id="@+id/ajustes"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:text="@string/ajustes" />

            <Button
                android:id="@+id/salir"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:text="@string/salir" />
            -->
            <Button
                android:id="@+id/salir"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_span="3"
                android:gravity="center"
                android:text="@string/salir" />
        </TableRow>
    </TableLayout>

</RelativeLayout>